<resources xmlns:tools="http://schemas.android.com/tools">
      <string name="app_name">Raj Traders</string>
    <string name="genTermPleaseSelectScoutingDistributor">Please Select Distributor</string>
    <string name="app_nameAlertInfo">Raj Traders</string>
    <string name="LocationDistributor">If you are inside Distributor then please go out of the Distributor and then click refresh button to update you location</string>
    <string name="select_state">Select State</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="select_district">Select District</string>
    <string name="select_tehsil">Select Tehsil/Taluka</string>
    <string name="txtSelectScoutingNextFollowUoDate">Select Follow UP Date</string>
    <string name="AlertForWarning">Warning</string>
    <string name="txtValidateSignatureRequired" tools:ignore="MissingTranslation">Required Signature of :</string>
    <string name="txtSelectMonthYear">Select Month Year</string>
    <string name="submitionsuccess">Suceessfully Submitted</string>
    <string name="MarkingAttendanceMsg" tools:ignore="MissingTranslation">Marking Attendance…</string>
    <string name="MsgSortStoreListByDistance" tools:ignore="MissingTranslation">Are you sure to Sort Stores by Distance?</string>
        <string name="WaitShortingStoresByDistance" tools:ignore="MissingTranslation">Sorting Stores By Distance…</string>
    <string name="SubmitStrInfoandStartOrderBooking">Do you want to Submit Store\'s Information? \n\n and Proceed for Order Booking?</string>
    <string name="title_activity_storewisereport">Store Wise Report</string>
    <string name="DayCollectionTotalInv">Total Invoice</string>
    <string name="DayCollectionCashColec">Cash Collection</string>
    <string name="DayCollectionChequeColec">Cheque Collection</string>
    <string name="DayCollectionBalAmt">Balance Amount</string>
    <string name="DayCollectionChequeDet">Cheque Details :</string>
    <string name="DayCollectionChequeNo">Cheque No</string>
    <string name="DayCollectionChequeAmt">Amount</string>
    <string name="DayCollectionChequeDate">Date</string>
    <string name="DayCollectionChequeBank">Bank</string>
    <string name="DayCollectionReportViewDetails">View Details</string>
    <string name="DayCollectionReportUpdateCollection">Update Collection</string>
    <string name="DayStoreCollectionReportInvAmt">Invoice Amount</string>
    <string name="DayStoreCollectionReportChequeAmt">Cheque Amt</string>
    <string name="DayStoreCollectionReportBal">Balance</string>
    <string name="DayStoreCollectionReportModify">Modify</string>
    <string name="DayEndDataMsg">Are you sure to End your Day Visit?</string>
    <string name="StoreSale">Avg. Sale </string>
    <string name="InvoiceReview">Invoice Review</string>
    <string name="selectAtleastOneOption">Please Select atleast one option to proceed.</string>
    <string name="selectAtleastOneOptionwithedittext">Please Specify the reason first to proceed.</string>
    <string name="verifyLocation">Please verify your location before clicking on next.</string>
    <string name="AddOrSelectStoreMsg">Please Add or Select Store To Proceed</string>
    <string name="SameStoreMessage">A different Outlet seems to have the same name pattern. \n\n Click YES to consider this as new Outlet else NO</string>
    <string name="pending_data">Submit Pending Data</string>
    <string name="submit_pending_data">Looks data has been not submitted yet, Please submit data before refreshing complete data</string>
    <string name="txtOk">OK</string>
    <string name="editStoreMessage">Click YES to proceed the mapping of this store.</string>
    <string name="uploading_error">Error while uploading image</string>
    <string name="working">Working</string>
    <string name="not_working">Not Working</string>
    <string name="TodayStock">Stock Today</string>
    <string name="stockAsOn">Stock On </string>
    <string name="DayStartButtonText">Day Start</string>
    <string name="ExitButtonText">Exit</string>
    <string name="today_working">Today Working</string>
    <string name="today_Notworking">Not Working</string>
    <string name="submittingDayStart">Submitting Day Start Details...</string>
    <string name="Coverage_Area">Coverage Area</string>
    <string name="DSR_Profile">TSI Profile</string>
    <string name="Contact_No">Contact No</string>
    <string name="DOB">DOB</string>
    <string name="WareHouseMsgWithoutInvoiceNumber">Stock loaded/adjusted recently will reflect after few minutes.</string>
    <string name="genStoreListWhoseDataIsNotYetSubmitted">Following invoices are Not Submitted as Yet. Invoices only Saved but not Submitted now will be permanently lost.</string>
    <string name="AlertDialogHeaderMsg">Alert</string>
    <string name="AlertDialogHeaderErrorMsg">Error</string>
    <string name="AlertDialogOkButton">OK</string>
    <string name="AlertDialogCancelButton">Cancel</string>
    <string name="AlertDialogYesButton">Yes</string>
    <string name="AlertDialogNoButton">No</string>
    <string name="genTermInformation">Information</string>
    <string name="genTermNoDataConnectionFullMsg">Your device has no Data Connection. \n Please ensure Internet is accessible to Continue.</string>
    <string name="BackButConfirm">Have you saved your data before going back?</string>
    <string name="distributorSubmitMessage">Do you want to submit distributors information</string>
    <string name="LocalAreaMessage">Local Area</string>
    <string name="PinCodeMessage">Pin Code</string>
    <string name="CityMessage">City</string>
    <string name="City"><font fgcolor="#0000ff">City</font><font fgcolor="#E00201">*</font></string>
    <string name="State"><font fgcolor="#0000ff">State</font><font fgcolor="#E00201">*</font></string>
    <string name="StateMessage">State</string>
    <string name="PleaseSelectDistributor">Please Select Distributor.</string>
    <string name="PleaseFillAddress">Please Fill Address Value.</string>
    <string name="PleaseFillProperAddress">Please fill Proper address.</string>
    <string name="PleaseFillPincode">Please Fill Pincode Value.</string>
    <string name="PleaseFillPincodeAllDigits">Pin Code value cannot be less than 6 digits.</string>
    <string name="PleaseFillCity">Please Fill City Value.</string>
    <string name="PleaseFillState">Please Fill State Value.</string>
    <string name="DayEndBeforeLogout">Please Day End Before Logging Out.</string>
    <string name="genTermNoDataConnection">Information</string>
    <string name="minAmountDue">Minimum amount: </string>
    <string name="internetError">Internet connection is slow ,please try again.</string>
    <string name="phnRegisterError">This phone is not registered, please contact administrator.</string>
    <string name="phnDateError">Your Phone Date is not correct.Please Correct it.</string>
    <string name="regID">Create Registration ID.</string>
    <string name="errorTxt">Error :</string>
    <string name="errorPlayServices">This device does not support Play services, App will not work normally</string>
    <string name="NewVersionMsg">New Version of this application is available now. \nPlease click on OK to install new Version!</string>
    <string name="UpdatingNewVersionMsg">Updating New Version…</string>
    <string name="routeNoAvail">Routes are not Available for this Phone</string>
    <string name="errorFetchData">Unable to fetch  data, please try again.</string>
    <string name="genTermPleaseWaitNew">Please Wait ...</string>
    <string name="genTermLoadData">Loading Data...</string>
    <string name="stockUploadStatusMsg">Stock Upload Status not Coming</string>
    <string name="NoRouteAvailable">No routes available for your device.</string>
    <string name="txtValidatingUser">Validating User</string>
    <string name="OrderTypeActualVisitHeader">Store Check</string>
    <string name="txtWelcome">Welcome</string>
    <string name="txtDayStart">Day Start</string>
    <string name="radioYes">Yes</string>
    <string name="radioNo">No</string>
    <string name="txtUpdate">Update Now</string>
    <string name="txtNotYou">Not You</string>
    <string name="hintMobileNo">Mobile No.</string>
    <string name="txtValidate">Validate</string>
    <string name="txtFName">First Name</string>
    <string name="txtLName">Last Name</string>
    <string name="txtContactNo">Contact No.</string>
    <string name="txtDOB">DOB</string>
    <string name="txtSelectDate">Select Date</string>
    <string name="txtSex">Sex</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="txtMaritalStatus">Marital Status</string>
    <string name="txtMarried">Married</string>
    <string name="txtUnmarried">Unmarried</string>
    <string name="txtMarriedDate">Married Date</string>
    <string name="txtQualification">Qualification</string>
    <string name="txtSelect">Select</string>
    <string name="txtUpdatedphoto">Updated photo</string>
    <string name="txtSelfie">Selfie</string>
    <string name="txtBrowse">Browse</string>
    <string name="txtEmailID">EmailID</string>
    <string name="txtBloodGroup">Blood Group</string>
    <string name="txtSIGNHERE">SIGN HERE</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtclearSign">clear Sign</string>
    <string name="txtsave">save</string>
    <string name="txtProceed">Proceed</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtNoCamera">Sorry, your phone does not have a camera!</string>
    <string name="txtNoFrontCamera">No front facing camera found.</string>
    <string name="txtNoBackCamera">No back facing camera found.</string>
    <string name="txtSuccessfullySaved">Successfully Saved</string>
    <string name="txtSELECTDOB">SELECT DOB</string>
    <string name="txtSelectMarriedDate">Select Married Date</string>
    <string name="txtBloodGroupTitle">Blood-Group</string>
    <string name="txtSubmitData">Do you want to submit data</string>
    <string name="txtErrorNoDataConnection">No Data Connection!</string>
    <string name="txtErrorInternetConnection">Your device has no Data Connection! Please ensure Internet is accessible to Continue.</string>
    <string name="txtErrorMobileNo">Mobile no. is not valid</string>
    <string name="txtSelectDOB">Please select DOB</string>
    <string name="txtValidateFirstName">First Name is empty</string>
    <string name="txtValidateLastName">Last Name is empty</string>
    <string name="txtValidateContactNo">Contact no. is not valid</string>
    <string name="txtValidateSelectSex">Please select Sex</string>
    <string name="SaveExit">Save &amp; Exit</string>
    <string name="Submit">Submit</string>
    <string name="lastvisitdetails_back">Back</string>
    <string name="AddNewStoreHeader">Add New Outlet</string>
    <string name="txtExit">Exit</string>
    <string name="IsLocCorrect">Location on map is correct according to you?</string>
    <string name="RefreshLoc">If you are inside store then please go out of the store and then click refresh button to update your location</string>
    <string name="txtRefresh">Refresh</string>
    <string name="txtNext">Next</string>
    <string name="txtSubmitBookOrder">Submit &amp; Book Order</string>
    <string name="ClickPhoto">Click Photo</string>
    <string name="remarks">.,/- abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="ownername">Owner Name</string>
    <string name="storeContactNo">Store Contact No.</string>
    <string name="storeaddress">Store Address</string>
    <string name="salespersonname">Sales Person Name</string>
    <string name="salespersoncontact">Sales Person Contact No.</string>
    <string name="addimages">Add Image</string>
    <string name="replaceimages">Replace Image</string>
    <string name="updateStoreDetail">Update Store Details</string>
</resources>