<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:fitsSystemWindows="true"

    >
    <!--
    main layout background color instead of bg_rspl
    android:background="#F5F5F5"
    -->
    <RelativeLayout
        android:id="@+id/ll_header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_header_corner"
        android:paddingLeft="5dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/txt_Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/AddNewStoreHeader"

            android:textColor="#CD005B"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_exit"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:src="@drawable/exit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtExit"
                android:textColor="#ED3338"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_button"
        android:layout_below="@+id/ll_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:id="@+id/fragmentForm"

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentTop="true"

                android:layout_weight="1"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/ll_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="5dp"


                    />

                <Button
                    android:id="@+id/full_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@android:color/transparent"
                    android:text="View full map"
                    android:textColor="#CD005B" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/IsLocCorrect"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/rg_yes_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AlertDialogYesButton" />

                    <RadioButton
                        android:id="@+id/rb_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AlertDialogNoButton" />
                </RadioGroup>

                <LinearLayout
                    android:id="@+id/ll_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txt_rfrshCmnt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="fill"
                        android:layout_weight="0.7"
                        android:paddingBottom="10dp"
                        android:text="@string/RefreshLoc"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_refresh"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="0.2"

                        android:background="@drawable/logo_background"

                        android:text="@string/txtRefresh"
                        android:textColor="#FFFF4424"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/ll_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="2dp">

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="match_parent"

                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/previous" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lastvisitdetails_back" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_save_Exit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView

                android:layout_width="match_parent"

                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/save_img" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/SaveExit" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_next"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/next" />

            <TextView
                android:id="@+id/txt_Next"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtNext" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bookOrder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/img_bookOrder"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:src="@drawable/backgrnd_marketvisit" />

            <TextView
                android:id="@+id/txt_bookOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/txtSubmitBookOrder" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
