<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:background="@color/primary_color"

        android:elevation="6dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@style/Toolbar.TitleText">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingRight="10dp"
            android:src="@drawable/ic_back"
            android:textSize="15sp"


            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/updateStoreDetail"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/logoutIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="10dp"
            android:src="@drawable/logout30"
            android:textSize="15sp"


            android:visibility="gone" />

        <!-- app:titleTextAppearance using for custom title size -->

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/shadow_with_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/ownername"
                android:textColor="#A6004E"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ET_ownername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_bg"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 -."
                android:inputType="textCapWords"
                android:textColor="#000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textviewLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/storeContactNo"
                android:textColor="#A6004E"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ET_storecontactno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_bg"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 -."
                android:inputType="number"
                android:maxLength="10"
                android:textColor="#000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/store_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/storeaddress"
                android:textColor="#A6004E"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ET_store_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"

                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_bg"
                android:digits="@string/remarks"
                android:textColor="#000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/salespersonname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/salespersonname"
                android:textColor="#A6004E"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ET_salespersonname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_bg"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 -."
                android:inputType="textCapWords"
                android:textColor="#000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/salespersoncontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/salespersoncontact"
                android:textColor="#A6004E"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ET_salespersoncontact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/edittext_bg"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="#000"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_addImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/addimages" />

                <RadioButton
                    android:id="@+id/rb_replaceImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/replaceimages" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_clickImage"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="#CD005B"
                android:drawableRight="@drawable/camera_icon"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/ClickPhoto"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:visibility="gone" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/shadow_with_5dp">

                <LinearLayout
                    android:id="@+id/ll_ParentOfImages"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="5dp">

                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/custom_button"
        android:gravity="center"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:text="@string/Submit"
        android:textColor="#ffffff"
        android:textStyle="bold" />
</LinearLayout>